// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`javascript_third_parties_segment datatype_in_alias 1`] = `
"{
  "high": [
    {
      "cwe_ids": [
        "201"
      ],
      "id": "javascript_third_parties_segment",
      "title": "Sensitive data sent to Segment detected.",
      "description": "## Description\\nLeaking sensitive data to third-party analytics tools is a common cause of data leaks and can lead to data breaches. This rule looks for instances of sensitive data sent to Segment.\\n\\n## Remediations\\n\\nWhen sending data to analytics libraries, ensure all sensitive data is removed.\\n\\n## Resources\\n- [Segment Node.js docs](https://segment.com/docs/connections/sources/catalog/libraries/server/node/)\\n- [Segment JavaScript docs](https://segment.com/docs/connections/sources/catalog/libraries/website/javascript/)\\n",
      "documentation_url": "https://docs.bearer.com/reference/rules/javascript_third_parties_segment",
      "line_number": 8,
      "full_filename": "/tmp/bearer-scan/datatype_in_alias.js",
      "filename": ".",
      "data_type": {
        "category_uuid": "cef587dd-76db-430b-9e18-7b031e1a193b",
        "name": "Email Address"
      },
      "category_groups": [
        "PII",
        "Personal Data"
      ],
      "source": {
        "start": 8,
        "end": 8,
        "column": {
          "start": 15,
          "end": 25
        }
      },
      "sink": {
        "start": 7,
        "end": 10,
        "column": {
          "start": 1,
          "end": 3
        },
        "content": "appAnalytics.alias({\\n  previousId: user.email,\\n  userId: user.id,\\n})"
      },
      "parent_line_number": 7,
      "snippet": "appAnalytics.alias({\\n  previousId: user.email,\\n  userId: user.id,\\n})",
      "fingerprint": "df462286e9e34d817b61a361c26e8720_0",
      "old_fingerprint": "db340be69ed775c0191d246a49a09329_0",
      "code_extract": "appAnalytics.alias({\\n  previousId: user.email,\\n  userId: user.id,\\n});"
    }
  ]
}"
`;

exports[`javascript_third_parties_segment datatype_in_group 1`] = `
"{
  "high": [
    {
      "cwe_ids": [
        "201"
      ],
      "id": "javascript_third_parties_segment",
      "title": "Sensitive data sent to Segment detected.",
      "description": "## Description\\nLeaking sensitive data to third-party analytics tools is a common cause of data leaks and can lead to data breaches. This rule looks for instances of sensitive data sent to Segment.\\n\\n## Remediations\\n\\nWhen sending data to analytics libraries, ensure all sensitive data is removed.\\n\\n## Resources\\n- [Segment Node.js docs](https://segment.com/docs/connections/sources/catalog/libraries/server/node/)\\n- [Segment JavaScript docs](https://segment.com/docs/connections/sources/catalog/libraries/website/javascript/)\\n",
      "documentation_url": "https://docs.bearer.com/reference/rules/javascript_third_parties_segment",
      "line_number": 8,
      "full_filename": "/tmp/bearer-scan/datatype_in_group.js",
      "filename": ".",
      "data_type": {
        "category_uuid": "ef613213-a222-4c01-ae38-c3043b68f738",
        "name": "Job Titles"
      },
      "category_groups": [
        "PII",
        "Personal Data"
      ],
      "source": {
        "start": 8,
        "end": 8,
        "column": {
          "start": 12,
          "end": 26
        }
      },
      "sink": {
        "start": 6,
        "end": 10,
        "column": {
          "start": 1,
          "end": 3
        },
        "content": "analytics.group({\\n  userId: user.id,\\n  groupId: user.job_title,\\n  traits: {},\\n})"
      },
      "parent_line_number": 6,
      "snippet": "analytics.group({\\n  userId: user.id,\\n  groupId: user.job_title,\\n  traits: {},\\n})",
      "fingerprint": "df462286e9e34d817b61a361c26e8720_0",
      "old_fingerprint": "8a1109dfe8fc062a4e1155a216bb8914_0",
      "code_extract": "analytics.group({\\n  userId: user.id,\\n  groupId: user.job_title,\\n  traits: {},\\n});"
    }
  ]
}"
`;

exports[`javascript_third_parties_segment datatype_in_identify 1`] = `
"{
  "high": [
    {
      "cwe_ids": [
        "201"
      ],
      "id": "javascript_third_parties_segment",
      "title": "Sensitive data sent to Segment detected.",
      "description": "## Description\\nLeaking sensitive data to third-party analytics tools is a common cause of data leaks and can lead to data breaches. This rule looks for instances of sensitive data sent to Segment.\\n\\n## Remediations\\n\\nWhen sending data to analytics libraries, ensure all sensitive data is removed.\\n\\n## Resources\\n- [Segment Node.js docs](https://segment.com/docs/connections/sources/catalog/libraries/server/node/)\\n- [Segment JavaScript docs](https://segment.com/docs/connections/sources/catalog/libraries/website/javascript/)\\n",
      "documentation_url": "https://docs.bearer.com/reference/rules/javascript_third_parties_segment",
      "line_number": 8,
      "full_filename": "/tmp/bearer-scan/datatype_in_identify.js",
      "filename": ".",
      "data_type": {
        "category_uuid": "14124881-6b92-4fc5-8005-ea7c1c09592e",
        "name": "Fullname"
      },
      "category_groups": [
        "PII",
        "Personal Data"
      ],
      "source": {
        "start": 8,
        "end": 8,
        "column": {
          "start": 5,
          "end": 24
        }
      },
      "sink": {
        "start": 5,
        "end": 13,
        "column": {
          "start": 1,
          "end": 3
        },
        "content": "analytics.identify({\\n  userId: user.id,\\n  traits: {\\n    name: user.fullName,\\n    email: user.emailAddress,\\n    plan: user.businessPlan,\\n    friends: user.friendCount\\n  }\\n})"
      },
      "parent_line_number": 5,
      "snippet": "analytics.identify({\\n  userId: user.id,\\n  traits: {\\n    name: user.fullName,\\n    email: user.emailAddress,\\n    plan: user.businessPlan,\\n    friends: user.friendCount\\n  }\\n})",
      "fingerprint": "df462286e9e34d817b61a361c26e8720_0",
      "old_fingerprint": "cb032b072d0a7bcaf1ca43e2bdc2b5cb_0",
      "code_extract": "analytics.identify({\\n  userId: user.id,\\n  traits: {\\n    name: user.fullName,\\n    email: user.emailAddress,\\n    plan: user.businessPlan,\\n    friends: user.friendCount\\n  }\\n});"
    },
    {
      "cwe_ids": [
        "201"
      ],
      "id": "javascript_third_parties_segment",
      "title": "Sensitive data sent to Segment detected.",
      "description": "## Description\\nLeaking sensitive data to third-party analytics tools is a common cause of data leaks and can lead to data breaches. This rule looks for instances of sensitive data sent to Segment.\\n\\n## Remediations\\n\\nWhen sending data to analytics libraries, ensure all sensitive data is removed.\\n\\n## Resources\\n- [Segment Node.js docs](https://segment.com/docs/connections/sources/catalog/libraries/server/node/)\\n- [Segment JavaScript docs](https://segment.com/docs/connections/sources/catalog/libraries/website/javascript/)\\n",
      "documentation_url": "https://docs.bearer.com/reference/rules/javascript_third_parties_segment",
      "line_number": 9,
      "full_filename": "/tmp/bearer-scan/datatype_in_identify.js",
      "filename": ".",
      "data_type": {
        "category_uuid": "cef587dd-76db-430b-9e18-7b031e1a193b",
        "name": "Email Address"
      },
      "category_groups": [
        "PII",
        "Personal Data"
      ],
      "source": {
        "start": 9,
        "end": 9,
        "column": {
          "start": 5,
          "end": 29
        }
      },
      "sink": {
        "start": 5,
        "end": 13,
        "column": {
          "start": 1,
          "end": 3
        },
        "content": "analytics.identify({\\n  userId: user.id,\\n  traits: {\\n    name: user.fullName,\\n    email: user.emailAddress,\\n    plan: user.businessPlan,\\n    friends: user.friendCount\\n  }\\n})"
      },
      "parent_line_number": 5,
      "snippet": "analytics.identify({\\n  userId: user.id,\\n  traits: {\\n    name: user.fullName,\\n    email: user.emailAddress,\\n    plan: user.businessPlan,\\n    friends: user.friendCount\\n  }\\n})",
      "fingerprint": "df462286e9e34d817b61a361c26e8720_1",
      "old_fingerprint": "cb032b072d0a7bcaf1ca43e2bdc2b5cb_1",
      "code_extract": "analytics.identify({\\n  userId: user.id,\\n  traits: {\\n    name: user.fullName,\\n    email: user.emailAddress,\\n    plan: user.businessPlan,\\n    friends: user.friendCount\\n  }\\n});"
    },
    {
      "cwe_ids": [
        "201"
      ],
      "id": "javascript_third_parties_segment",
      "title": "Sensitive data sent to Segment detected.",
      "description": "## Description\\nLeaking sensitive data to third-party analytics tools is a common cause of data leaks and can lead to data breaches. This rule looks for instances of sensitive data sent to Segment.\\n\\n## Remediations\\n\\nWhen sending data to analytics libraries, ensure all sensitive data is removed.\\n\\n## Resources\\n- [Segment Node.js docs](https://segment.com/docs/connections/sources/catalog/libraries/server/node/)\\n- [Segment JavaScript docs](https://segment.com/docs/connections/sources/catalog/libraries/website/javascript/)\\n",
      "documentation_url": "https://docs.bearer.com/reference/rules/javascript_third_parties_segment",
      "line_number": 11,
      "full_filename": "/tmp/bearer-scan/datatype_in_identify.js",
      "filename": ".",
      "data_type": {
        "category_uuid": "68631dba-5696-4cc0-b6a8-0175ca99a7a2",
        "name": "Friends"
      },
      "category_groups": [
        "PII",
        "Personal Data"
      ],
      "source": {
        "start": 11,
        "end": 11,
        "column": {
          "start": 5,
          "end": 30
        }
      },
      "sink": {
        "start": 5,
        "end": 13,
        "column": {
          "start": 1,
          "end": 3
        },
        "content": "analytics.identify({\\n  userId: user.id,\\n  traits: {\\n    name: user.fullName,\\n    email: user.emailAddress,\\n    plan: user.businessPlan,\\n    friends: user.friendCount\\n  }\\n})"
      },
      "parent_line_number": 5,
      "snippet": "analytics.identify({\\n  userId: user.id,\\n  traits: {\\n    name: user.fullName,\\n    email: user.emailAddress,\\n    plan: user.businessPlan,\\n    friends: user.friendCount\\n  }\\n})",
      "fingerprint": "df462286e9e34d817b61a361c26e8720_2",
      "old_fingerprint": "cb032b072d0a7bcaf1ca43e2bdc2b5cb_2",
      "code_extract": "analytics.identify({\\n  userId: user.id,\\n  traits: {\\n    name: user.fullName,\\n    email: user.emailAddress,\\n    plan: user.businessPlan,\\n    friends: user.friendCount\\n  }\\n});"
    },
    {
      "cwe_ids": [
        "201"
      ],
      "id": "javascript_third_parties_segment",
      "title": "Sensitive data sent to Segment detected.",
      "description": "## Description\\nLeaking sensitive data to third-party analytics tools is a common cause of data leaks and can lead to data breaches. This rule looks for instances of sensitive data sent to Segment.\\n\\n## Remediations\\n\\nWhen sending data to analytics libraries, ensure all sensitive data is removed.\\n\\n## Resources\\n- [Segment Node.js docs](https://segment.com/docs/connections/sources/catalog/libraries/server/node/)\\n- [Segment JavaScript docs](https://segment.com/docs/connections/sources/catalog/libraries/website/javascript/)\\n",
      "documentation_url": "https://docs.bearer.com/reference/rules/javascript_third_parties_segment",
      "line_number": 18,
      "full_filename": "/tmp/bearer-scan/datatype_in_identify.js",
      "filename": ".",
      "data_type": {
        "category_uuid": "cef587dd-76db-430b-9e18-7b031e1a193b",
        "name": "Email Address"
      },
      "category_groups": [
        "PII",
        "Personal Data"
      ],
      "source": {
        "start": 18,
        "end": 18,
        "column": {
          "start": 18,
          "end": 28
        }
      },
      "sink": {
        "start": 18,
        "end": 18,
        "column": {
          "start": 1,
          "end": 29
        },
        "content": "browser.identify(user.email)"
      },
      "parent_line_number": 18,
      "snippet": "browser.identify(user.email)",
      "fingerprint": "df462286e9e34d817b61a361c26e8720_3",
      "old_fingerprint": "cb032b072d0a7bcaf1ca43e2bdc2b5cb_3",
      "code_extract": "browser.identify(user.email)"
    }
  ]
}"
`;

exports[`javascript_third_parties_segment datatype_in_page 1`] = `
"{
  "high": [
    {
      "cwe_ids": [
        "201"
      ],
      "id": "javascript_third_parties_segment",
      "title": "Sensitive data sent to Segment detected.",
      "description": "## Description\\nLeaking sensitive data to third-party analytics tools is a common cause of data leaks and can lead to data breaches. This rule looks for instances of sensitive data sent to Segment.\\n\\n## Remediations\\n\\nWhen sending data to analytics libraries, ensure all sensitive data is removed.\\n\\n## Resources\\n- [Segment Node.js docs](https://segment.com/docs/connections/sources/catalog/libraries/server/node/)\\n- [Segment JavaScript docs](https://segment.com/docs/connections/sources/catalog/libraries/website/javascript/)\\n",
      "documentation_url": "https://docs.bearer.com/reference/rules/javascript_third_parties_segment",
      "line_number": 10,
      "full_filename": "/tmp/bearer-scan/datatype_in_page.js",
      "filename": ".",
      "data_type": {
        "category_uuid": "7a794bd6-a6d1-429d-91a2-377acce9e9db",
        "name": "Bank Account"
      },
      "category_groups": [
        "PII",
        "Personal Data"
      ],
      "source": {
        "start": 10,
        "end": 10,
        "column": {
          "start": 20,
          "end": 48
        }
      },
      "sink": {
        "start": 6,
        "end": 12,
        "column": {
          "start": 1,
          "end": 3
        },
        "content": "analytics.page({\\n  userId: customer.id,\\n  category: \\"Shopping Cart\\",\\n  properties: {\\n    path: \\"/cart/\\"+customer.bank_account_number\\n  },\\n})"
      },
      "parent_line_number": 6,
      "snippet": "analytics.page({\\n  userId: customer.id,\\n  category: \\"Shopping Cart\\",\\n  properties: {\\n    path: \\"/cart/\\"+customer.bank_account_number\\n  },\\n})",
      "fingerprint": "df462286e9e34d817b61a361c26e8720_0",
      "old_fingerprint": "95be5742a2ea59fc50223aba570b3b1f_0",
      "code_extract": "analytics.page({\\n  userId: customer.id,\\n  category: \\"Shopping Cart\\",\\n  properties: {\\n    path: \\"/cart/\\"+customer.bank_account_number\\n  },\\n});"
    }
  ]
}"
`;

exports[`javascript_third_parties_segment datatype_in_track 1`] = `
"{
  "high": [
    {
      "cwe_ids": [
        "201"
      ],
      "id": "javascript_third_parties_segment",
      "title": "Sensitive data sent to Segment detected.",
      "description": "## Description\\nLeaking sensitive data to third-party analytics tools is a common cause of data leaks and can lead to data breaches. This rule looks for instances of sensitive data sent to Segment.\\n\\n## Remediations\\n\\nWhen sending data to analytics libraries, ensure all sensitive data is removed.\\n\\n## Resources\\n- [Segment Node.js docs](https://segment.com/docs/connections/sources/catalog/libraries/server/node/)\\n- [Segment JavaScript docs](https://segment.com/docs/connections/sources/catalog/libraries/website/javascript/)\\n",
      "documentation_url": "https://docs.bearer.com/reference/rules/javascript_third_parties_segment",
      "line_number": 8,
      "full_filename": "/tmp/bearer-scan/datatype_in_track.js",
      "filename": ".",
      "data_type": {
        "category_uuid": "b5a3b0fd-dd5c-420d-91ce-dd2dddc8cc38",
        "name": "IP address"
      },
      "category_groups": [
        "Personal Data"
      ],
      "source": {
        "start": 8,
        "end": 8,
        "column": {
          "start": 15,
          "end": 30
        }
      },
      "sink": {
        "start": 5,
        "end": 9,
        "column": {
          "start": 1,
          "end": 3
        },
        "content": "client.track({\\n  event: \\"some event name\\",\\n  userId: user.id,\\n  userIpAddr: user.ip_address,\\n})"
      },
      "parent_line_number": 5,
      "snippet": "client.track({\\n  event: \\"some event name\\",\\n  userId: user.id,\\n  userIpAddr: user.ip_address,\\n})",
      "fingerprint": "df462286e9e34d817b61a361c26e8720_0",
      "old_fingerprint": "7e3a0a37a21c50a3052b1d15f7ab8216_0",
      "code_extract": "client.track({\\n  event: \\"some event name\\",\\n  userId: user.id,\\n  userIpAddr: user.ip_address,\\n});"
    },
    {
      "cwe_ids": [
        "201"
      ],
      "id": "javascript_third_parties_segment",
      "title": "Sensitive data sent to Segment detected.",
      "description": "## Description\\nLeaking sensitive data to third-party analytics tools is a common cause of data leaks and can lead to data breaches. This rule looks for instances of sensitive data sent to Segment.\\n\\n## Remediations\\n\\nWhen sending data to analytics libraries, ensure all sensitive data is removed.\\n\\n## Resources\\n- [Segment Node.js docs](https://segment.com/docs/connections/sources/catalog/libraries/server/node/)\\n- [Segment JavaScript docs](https://segment.com/docs/connections/sources/catalog/libraries/website/javascript/)\\n",
      "documentation_url": "https://docs.bearer.com/reference/rules/javascript_third_parties_segment",
      "line_number": 17,
      "full_filename": "/tmp/bearer-scan/datatype_in_track.js",
      "filename": ".",
      "data_type": {
        "category_uuid": "cef587dd-76db-430b-9e18-7b031e1a193b",
        "name": "Email Address"
      },
      "category_groups": [
        "PII",
        "Personal Data"
      ],
      "source": {
        "start": 17,
        "end": 17,
        "column": {
          "start": 17,
          "end": 27
        }
      },
      "sink": {
        "start": 17,
        "end": 17,
        "column": {
          "start": 3,
          "end": 28
        },
        "content": "browser.track(user.email)"
      },
      "parent_line_number": 17,
      "snippet": "browser.track(user.email)",
      "fingerprint": "df462286e9e34d817b61a361c26e8720_1",
      "old_fingerprint": "7e3a0a37a21c50a3052b1d15f7ab8216_1",
      "code_extract": "  browser.track(user.email)"
    }
  ]
}"
`;

exports[`javascript_third_parties_segment ok_ignored_datatypes 1`] = `"{}"`;

exports[`javascript_third_parties_segment ok_no_datatypes 1`] = `"{}"`;
